gitconfig: update email address

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	email = rob@eatenbyagrue.org
-	name = Robert Norris
+	email = robn@robn.io
+	name = Rob N ★
 [color]
     xbranch = auto
 	ui = auto
