--- a/.gitconfig
+++ b/.gitconfig
@@ -6,7 +6,7 @@
 	ui = auto
 [alias]
 	sl = log --decorate --oneline
-	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cd) %C(bold blue)%an%Creset' --abbrev-commit
 [push]
 	default = matching
 [core]
