dzil: setup git on new module minting

--- a/.dzil/profiles/default/profile.ini
+++ b/.dzil/profiles/default/profile.ini
@@ -1,12 +1,21 @@
 [TemplateModule/:DefaultModuleMaker]
 template = Module.pm
 
+[Git::Init]
+
 [DistINI]
 append_file = plugins.ini
 
-[GenerateFile / Generate-Changes ]
+[GenerateFile / Generate-Changes]
 filename    = Changes
 is_template = 0
 content = Revision history for {{$dist->name}}
 content =
 content = {{$NEXT}}
+
+[GenerateFile / GitIgnore]
+filename = .gitignore
+is_template = 1
+content = /{{ $dist->name }}*
+content = .build
+content = *.swp
