--- a/.gitconfig
+++ b/.gitconfig
@@ -17,3 +17,13 @@
 [diff]
   compactionHeuristic = true
 	noprefix = true
+[core]
+  pager = delta
+[interactive]
+  diffFilter = delta --color-only
+[delta]
+  features = side-by-side line-numbers decorations
+[delta "decorations"]
+  commit-decoration-style = bold yellow box ul
+  file-style = bold yellow ul
+  file-decoration-style = none
