javaws: allow even more ancient bullshit to run

--- a/.config/icedtea-web/deployment.properties
+++ b/.config/icedtea-web/deployment.properties
@@ -2,3 +2,4 @@
 # You need JDK 8, and you also have to comment out out
 # jdk.jar.disabledAlgorithms in java.security
 deployment.jre.dir = /usr/lib/jvm/adoptopenjdk-8-hotspot-amd64
+deployment.security.level=ALLOW_UNSIGNED
